--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 	--main-font: "Poppins", sans-serif;
 	--main-font-size: 1rem;
 	--main-box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+	--main-box-shadow-color: rgba(0, 0, 0, 0.1);
 }
 * {
 	box-sizing: border-box;
