--- a/src/components/SearchForm/calendar/calendar.css
+++ b/src/components/SearchForm/calendar/calendar.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-
 .rdp {
 	--selected-background: rgba(255, 166, 0, 0.356);
 	--font-color-selected: rgba(146, 95, 0, 0.863);
@@ -15,13 +13,20 @@
 	color: var(--font-color-selected);
 	background-color: var(--selected-background);
 }
+.calendar {
+	background-color: white;
+	box-shadow: var(--main-box-shadow);
+	border: 1px solid var(--main-box-shadow-color);
+}
+.calendar-positioning {
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	transform: translateX(-50%);
+}
 
 /* Overrides */
-.rdp-day,
-.rdp-caption,
-.rdp-head {
-	font-family: "Poppins", sans-serif;
-}
+
 .rdp-button:hover:not([disabled]):not(.rdp-day_selected) {
 	color: white;
 	background-color: var(--font-color-selected);
