--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,10 @@ body {
 	padding: 0;
 	font-family: var(--main-font);
 }
+
+.pageContainer {
+	max-width: 1500px;
+	position: relative;
+	padding: 0 3vw;
+	margin: 0 auto;
+}
