--- a/src/components/SearchForm/inputSearch/inputSearch.css
+++ b/src/components/SearchForm/inputSearch/inputSearch.css
@@ -13,6 +13,7 @@
 	min-width: calc(250px + 0.5vw);
 	background-color: white;
 	box-shadow: 0px 15px 41px -22px rgba(0, 0, 0, 0.1);
+	z-index: 2;
 }
 
 .info {
