--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,59 +1,27 @@
 .searchFrame {
 	--inner-border-radius: 8px;
-	display: flex;
-	background-color: white /* rgb(255, 242, 242) */;
-	flex-wrap: wrap;
-	align-items: center;
-	max-width: 1300px;
-	margin: auto;
-	justify-content: space-between;
-	box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
-	border: 1px rgba(0, 0, 0, 0.1) solid;
-	border-radius: 15px;
+	display: grid;
+	margin: 0 1rem;
+	padding: 1rem 1.2rem;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	column-gap: 10px;
+	row-gap: 10px;
+	grid-template-areas:
+		"departureLocation departureLocation destinationLocation destinationLocation"
+		"departureDate returnDate personNumber searchButton";
 }
 
 .inputContainer {
 	position: relative;
-	padding: 0.5rem;
 }
-.inputControl {
-	--font-weight: 500;
-	--outline-color: rgb(255, 203, 203);
-	width: 100%;
-	margin: 0;
-	outline: 1px solid var(--outline-color);
-	font-size: var(--main-font-size);
-	font-weight: var(--font-weight);
-	border: none;
-	padding: 0.8rem 1rem;
-	transition: all ease-in-out 0.15s;
-}
-.inputControl:focus {
-	outline: 3px solid var(--outline-color);
-}
-.inputContainer:first-child .inputControl {
-	border-bottom-left-radius: 10px;
-	border-top-left-radius: 10px;
-}
-.inputContainer:last-child .inputControl {
-	border-bottom-right-radius: 10px;
-	border-top-right-radius: 10px;
-}
+
 .btn,
 .btn:focus {
 	font-family: var(--main-font-size);
 	width: 100%;
 	background: rgb(255, 94, 35);
 	color: white;
-	cursor: pointer;
-}
-.btn:hover {
-	background: rgb(255, 72, 6);
-}
-.btn:active {
-	background: rgb(207, 58, 5);
-}
-p.inputControl {
 	cursor: pointer;
 }
 
@@ -75,41 +43,21 @@ p.inputControl {
 #searchButton {
 	grid-area: searchButton;
 }
-@media (min-width: 801px) and (max-width: 1350px) {
+@media (min-width: 801px) and (max-width: 1080px) {
 	.searchFrame {
-		display: grid;
 		margin: 0 3rem;
-		padding: 1rem 1.2rem;
-		grid-template-columns: repeat(4, 1fr);
-		grid-template-rows: repeat(2, 1fr);
 
 		grid-template-areas:
-			"departureLocation departureLocation destinationLocation destinationLocation"
-			"departureDate returnDate personNumber searchButton";
-	}
-
-	.inputContainer:first-child .inputControl {
-		border-radius: 0;
-		border-top-left-radius: var(--inner-border-radius);
-	}
-	.inputContainer:nth-child(2) .inputControl {
-		border-radius: 0;
-		border-top-right-radius: var(--inner-border-radius);
-	}
-	.inputContainer:nth-child(3) .inputControl {
-		border-radius: 0;
-		border-bottom-left-radius: var(--inner-border-radius);
-	}
-	.inputContainer:last-child .inputControl {
-		border-radius: 0;
-		border-bottom-right-radius: var(--inner-border-radius);
+			"departureLocation departureLocation departureLocation destinationLocation destinationLocation destinationLocation"
+			"departureDate departureDate returnDate returnDate personNumber personNumber"
+			"searchButton searchButton searchButton searchButton searchButton searchButton";
 	}
 }
 
 @media screen and (max-width: 800px) {
 	.searchFrame {
 		display: grid;
-		margin: 0 3rem;
+		margin: 0 1rem;
 		padding: 1.5rem;
 		grid-template-columns: 1fr;
 		grid-template-rows: repeat(6, 1fr);
@@ -121,17 +69,5 @@ p.inputControl {
 			"returnDate"
 			"personNumber"
 			"searchButton";
-	}
-
-	.inputContainer:first-child .inputControl {
-		border-radius: 0px;
-		border-top-left-radius: var(--inner-border-radius);
-		border-top-right-radius: var(--inner-border-radius);
-	}
-
-	.inputContainer:last-child .inputControl {
-		border-radius: 0px;
-		border-bottom-right-radius: var(--inner-border-radius);
-		border-bottom-left-radius: var(--inner-border-radius);
 	}
 }
