--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Croissant+One&display=swap");
 :root {
 	--main-font: "Poppins", sans-serif;
 	--main-font-size: 1rem;
@@ -21,6 +21,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	position: relative;
+	top: 0;
 	padding: 0 3vw;
 	margin: 0 auto;
 }
